--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,12 +3,15 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{buzato2021operadores,
+  title={Operadores argumentativos em reda{\c{c}}{\~o}es modelo ENEM: uma an{\'a}lise baseada em corpus [Connectives in ENEM essays: a corpus-driven analysis]},
+  author={Buzato, Dalmo and Machado, Elias Victor de Jesus Cardoso and da Costa, Priscilla Tulipa and da Silva, Suelen {\'E}rica Costa},
+  journal={Scientia Prima},
+  volume={7},
+  pages={e97--e97},
+  year={2021},
+  url={https://www.abric.ong.br/ojs/index.php/scientiaprima/article/view/97},
+  pdf={oa-corpus-2021.pdf},
 }
 
 @book{einstein1956investigations,
