--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,9 @@
   pages={e97--e97},
   year={2021},
   url={https://www.abric.ong.br/ojs/index.php/scientiaprima/article/view/97},
+  html={https://www.abric.ong.br/ojs/index.php/scientiaprima/article/view/97},
   pdf={oa-corpus-2021.pdf},
+  preview={oa-2021-preview.png}
 }
 
 @book{einstein1956investigations,
