--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,32 @@
 
 @string{aps = {American Physical Society,}}
 
+
+@inproceedings{buzato2023universal,
+  title={Universal Dependencies and Language Contact Annotation: Experience from Warao refugees signs in Brazil},
+  author={Buzato, Dalmo},
+  booktitle={Proceedings of the 2nd Edition of the Universal Dependencies Brazilian Festival},
+  pages={509--519},
+  year={2023},
+  url={https://aclanthology.org/2023.udfestbr-1.10.pdf},
+  html={https://aclanthology.org/2023.udfestbr-1.10.pdf},
+  pdf={ud-warao-2023.pdf},
+  preview={ud-warao-2023.png}
+}
+
+@inproceedings{buzato2023contato,
+  title={O contato lingu{\'\i}stico em placas de refugiados venezuelanos em Belo Horizonte e regi{\~a}o metropolitana: observa{\c{c}}{\~o}es  [Language contact on Venezuelan refugee signs in Belo Horizonte and metropolitan region: preliminary observations]},
+  author={Buzato, Dalmo and Vital, {\'A}tila},
+  booktitle={Anais do Congresso Nacional Universidade, EAD e Software Livre},
+  volume={1},
+  number={15},
+  year={2023},
+  url={https://ueadsl.textolivre.pro.br/index.php/UEADSL/article/view/1120},
+  html={https://ueadsl.textolivre.pro.br/index.php/UEADSL/article/view/1120},
+  pdf={buzato-vital-warao-2023.pdf},
+  preview={warao-bh-2023.jpg}
+}
+
 @article{buzato2021operadores,
   title={Operadores argumentativos em reda{\c{c}}{\~o}es modelo ENEM: uma an{\'a}lise baseada em corpus [Connectives in ENEM essays: a corpus-driven analysis]},
   author={Buzato, Dalmo and Machado, Elias Victor de Jesus Cardoso and da Costa, Priscilla Tulipa and da Silva, Suelen {\'E}rica Costa},
@@ -15,6 +41,20 @@
   pdf={oa-corpus-2021.pdf},
   preview={oa-2021-preview.png}
 }
+
+@inproceedings{da2019lingua,
+  title={L{\'i}ngua falada, L{\'i}ngua escrita e an{\'a}lise de corpora orais: breve revis{\~a}o [Spoken language, written language and analysis of spoken corpora: a brief review]},
+  author={Costa, Priscilla Tulipa da and Buzato, Dalmo},
+  booktitle={Anais do Encontro Virtual de Documenta{\c{c}}{\~a}o em Software Livre e Congresso Internacional de Linguagem e Tecnologia Online},
+  volume={8},
+  number={1},
+  year={2019},
+  url={https://ciltec.textolivre.pro.br/index.php/CILTecOnline/article/view/918},
+  html={https://ciltec.textolivre.pro.br/index.php/CILTecOnline/article/view/918},
+  pdf={costa-buzato-corpus-2019.pdf}
+}
+
+
 
 @book{einstein1956investigations,
   bibtex_show={true},
