--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,19 @@
 @string{aps = {American Physical Society,}}
 
 
+@inproceedings{buzato2024creating,
+  title={Creating datasets for emergent contact languages preservation},
+  author={Buzato, Dalmo and Vital, {\'A}tila},
+  booktitle={Proceedings of the 16th International Conference on Computational Processing of Portuguese-Vol. 2},
+  pages={134--140},
+  year={2024},
+  url={https://aclanthology.org/2024.propor-2.18.pdf},
+  html={https://aclanthology.org/2024.propor-2.18.pdf},
+  pdf={dh-warao-2024.pdf},
+  preview={dh-warao-2024.png}
+
+}
+
 @inproceedings{buzato2023universal,
   title={Universal Dependencies and Language Contact Annotation: Experience from Warao refugees signs in Brazil},
   author={Buzato, Dalmo},
@@ -26,7 +39,7 @@
   url={https://ueadsl.textolivre.pro.br/index.php/UEADSL/article/view/1120},
   html={https://ueadsl.textolivre.pro.br/index.php/UEADSL/article/view/1120},
   pdf={buzato-vital-warao-2023.pdf},
-  preview={warao-bh-2023.jpg}
+  preview={warao_bh_2023.jpg}
 }
 
 @article{buzato2021operadores,
