--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,54 @@
 
 @string{aps = {American Physical Society,}}
 
+@incollection{onder2025implementing,
+  title={Implementing Translanguaging Approach: Contextualizations in Turkiye and Brazil},
+  author={Onder-Ozdemir, Neslihan and Pagano, Adriana Silvina and Buzato, Dalmo and Vital, {\'A}tila AS and Cunha, Evandro LTP},
+  booktitle={Global Perspective on Issues and Trends in Educational Translanguaging},
+  pages={377--406},
+  year={2025},
+  publisher={IGI Global Scientific Publishing},
+  url={https://www.igi-global.com/chapter/implementing-translanguaging-approach/381723},
+  html={https://www.igi-global.com/chapter/implementing-translanguaging-approach/381723},
+  preview={transwarao-nlp-2025.png}
+}
+
+@article{kuperman2025global,
+  title={Global measures of syntactic and lexical complexity are not strong predictors of eye-movement patterns in sentence and passage reading},
+  author={Kuperman, Victor and Buzato, Dalmo and Rothe-Neves, Rui},
+  journal={Quarterly Journal of Experimental Psychology},
+  pages={17470218251317372},
+  year={2025},
+  publisher={SAGE Publications Sage UK: London, England},
+  url={https://journals.sagepub.com/doi/full/10.1177/17470218251317372},
+  html={https://journals.sagepub.com/doi/full/10.1177/17470218251317372},
+  pdf={kuperman-et-al-2025.pdf},
+  preview={kuperman-et-al-2025.png}
+}
+
+@inproceedings{buzato2024agent,
+  title={Agent-based modeling of language change in a small-world network},
+  author={Buzato, Dalmo and Cunha, Evandro},
+  booktitle={Proceedings of the 2024 Joint International Conference on Computational Linguistics, Language Resources and Evaluation (LREC-COLING 2024)},
+  pages={594--599},
+  year={2024},
+  url={https://aclanthology.org/2024.lrec-main.51/},
+  html={https://aclanthology.org/2024.lrec-main.51/},
+  pdf={lrec-coling-2024.pdf},
+  preview={lrec-coling-2024.png}
+}
+
+@inproceedings{buzato2024bartoli,
+  title={Bartoli's areal norms revisited: an agent-based modeling approach},
+  author={Buzato, Dalmo and Cunha, Evandro},
+  booktitle={Proceedings of the 16th International Conference on Computational Processing of Portuguese-Vol. 1},
+  pages={422--431},
+  year={2024},
+  url={https://aclanthology.org/2024.propor-1.43.pdf},
+  html={https://aclanthology.org/2024.propor-1.43.pdf},
+  pdf={bartoli-propor-2024.pdf},
+  preview={bartoli-propor-2024.png}
+}
 
 @inproceedings{buzato2024creating,
   title={Creating datasets for emergent contact languages preservation},
@@ -30,7 +78,7 @@
 }
 
 @inproceedings{buzato2023contato,
-  title={O contato lingu{\'\i}stico em placas de refugiados venezuelanos em Belo Horizonte e regi{\~a}o metropolitana: observa{\c{c}}{\~o}es  [Language contact on Venezuelan refugee signs in Belo Horizonte and metropolitan region: preliminary observations]},
+  title={O contato lingu{\'\i}stico em placas de refugiados venezuelanos em Belo Horizonte e regi{\~a}o metropolitana: observa{\c{c}}{\~o}es preliminares [Language contact on Venezuelan refugee signs in Belo Horizonte and metropolitan region: preliminary observations]},
   author={Buzato, Dalmo and Vital, {\'A}tila},
   booktitle={Anais do Congresso Nacional Universidade, EAD e Software Livre},
   volume={1},
