--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,7 @@
   publisher={IGI Global Scientific Publishing},
   url={https://www.igi-global.com/chapter/implementing-translanguaging-approach/381723},
   html={https://www.igi-global.com/chapter/implementing-translanguaging-approach/381723},
-  preview={transwarao-nlp-2025.png}
+  preview={transwarao-nlp-2025.jpg}
 }
 
 @article{kuperman2025global,
